# packet-probe

./: .gitignore  CMakeLists.txt  README.md  mock_device.py
.claude/skills/run-packet-probe-viewer/: SKILL.md  driver.py
.github/workflows/: ci.yml
apps/packet-probe-cli/: CMakeLists.txt  cli_decoder_options.cpp  cli_decoder_options.hpp  cli_help.cpp  cli_help.hpp  cli_options.cpp  cli_options.hpp  cli_send_options.cpp  cli_send_options.hpp  engine_config.cpp  engine_config.hpp  engine_controller.cpp  engine_controller.hpp  main.cpp  run_common.cpp  run_common.hpp  run_engine.cpp  run_modes.hpp  run_serial.cpp  run_tcp_client.cpp  run_tcp_proxy.cpp  run_tcp_server.cpp  run_udp.cpp
docs/: architecture.md  capture-modes.md  decoders.md  header-structure.md  ipc-protocol.md  jsonl-format.md  roadmap.md  send-input.md  serial-validation.md
docs/validation/: ipc-event-stream.md  serial-pty-loopback.md  tcp-client-echo.md  tcp-proxy-echo.md  tcp-server-client.md  udp-echo.md  viewer-ipc.md  viewer-jsonl-log.md
include/packet_probe/: event_pipeline.hpp  frame_decode_result.hpp  frame_decoder.hpp  frame_decoder_factory.hpp  hex_dump.hpp  ipc_event_server.hpp  jsonl_recorder.hpp  jsonl_serializer.hpp  latency_tracker.hpp  packet_event.hpp  packet_probe.hpp  send_input.hpp  send_input_parser.hpp  serial_direct_capture_session.hpp  tcp_direct_capture_session.hpp  tcp_proxy_capture_session.hpp  udp_direct_capture_session.hpp  version.hpp
include/packet_probe/core/: jsonl_serializer.hpp  packet_event.hpp  sequence_allocator.hpp
include/packet_probe/decoder/: decoder_config.hpp  frame_decoder.hpp  message_decoder.hpp
include/packet_probe/ipc/: ipc_protocol.hpp
src/capture/: capture_session.hpp  serial_direct_capture_session.cpp  serial_direct_capture_session.hpp  serial_options.hpp  tcp_direct_capture_session.cpp  tcp_direct_capture_session.hpp  tcp_proxy_capture_session.cpp  tcp_proxy_capture_session.hpp  tcp_server_capture_session.cpp  tcp_server_capture_session.hpp  udp_direct_capture_session.cpp  udp_direct_capture_session.hpp
src/core/: endpoint.cpp  endpoint.hpp  event_pipeline.cpp  event_pipeline.hpp  hex_dump.cpp  jsonl_serializer.cpp  latency_tracker.cpp  latency_tracker.hpp  packet_event.cpp  send_input_parser.cpp  send_input_parser.hpp  serial_options.cpp
src/decoder/: delimiter_frame_decoder.cpp  fixed_size_frame_decoder.cpp  frame_decoder.cpp  frame_decoder_factory.cpp  frame_decoder_factory.hpp  length_prefix_frame_decoder.cpp
src/ipc/: ipc_event_server.cpp  ipc_event_server.hpp  ipc_protocol.cpp
src/recorder/: jsonl_recorder.cpp  jsonl_recorder.hpp
tests/: CMakeLists.txt  test_cli_options.cpp  test_engine_config.cpp  test_engine_controller.cpp  test_event_pipeline.cpp  test_frame_decoders.cpp  test_hex_dump.cpp  test_ipc_event_server.cpp  test_ipc_protocol.cpp  test_jsonl_recorder.cpp  test_latency_tracker.cpp  test_packet_event_direction.cpp  test_public_headers.cpp  test_send_input_parser.cpp  test_serial_options.cpp  test_tcp_capture_session.cpp  test_tcp_server_capture_session.cpp
viewer/: LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
viewer/packet_probe_viewer/: __init__.py  app.py  capture_command.py  capture_process.py  event_model.py  ipc_client.py  ipc_connector.py  ipc_path.py  jsonl_log_loader.py  main.py  main_window.py  packet_table_model.py  styles.py  viewer_settings.py
viewer/packet_probe_viewer/widgets/: __init__.py  event_detail.py  hex_view.py
viewer/tests/: test_app_args.py  test_capture_command.py  test_event_model.py  test_hex_format.py  test_hex_view.py  test_ipc_client_import.py  test_ipc_path.py  test_jsonl_log_loader.py  test_main_window.py  test_packet_table_model.py
