[project]
name = "packet-probe-viewer"
version = "0.1.0"
description = "Optional read-only viewer for Packet Probe event streams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Packet Probe contributors" }
]
dependencies = [
  "PySide6>=6.6",
  # Live IPC requires unilink-python.
  # Keep this as a documented local/sibling dependency until packaged wheels are available.
  # "unilink-python>=0.7.4",
]

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[project.scripts]
packet-probe-viewer = "packet_probe_viewer.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packet_probe_viewer*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
